// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TypeScript Writer Generator generates Patient resource in inMemoryOnly mode with snapshot 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { Address } from "../hl7-fhir-r4-core/Address";
import type { Attachment } from "../hl7-fhir-r4-core/Attachment";
import type { BackboneElement } from "../hl7-fhir-r4-core/BackboneElement";
import type { CodeableConcept } from "../hl7-fhir-r4-core/CodeableConcept";
import type { ContactPoint } from "../hl7-fhir-r4-core/ContactPoint";
import type { DomainResource } from "../hl7-fhir-r4-core/DomainResource";
import type { HumanName } from "../hl7-fhir-r4-core/HumanName";
import type { Identifier } from "../hl7-fhir-r4-core/Identifier";
import type { Period } from "../hl7-fhir-r4-core/Period";
import type { Reference } from "../hl7-fhir-r4-core/Reference";

import type { Element } from "../hl7-fhir-r4-core/Element";
export type { Address } from "../hl7-fhir-r4-core/Address";
export type { Attachment } from "../hl7-fhir-r4-core/Attachment";
export type { BackboneElement } from "../hl7-fhir-r4-core/BackboneElement";
export type { CodeableConcept } from "../hl7-fhir-r4-core/CodeableConcept";
export type { ContactPoint } from "../hl7-fhir-r4-core/ContactPoint";
export type { HumanName } from "../hl7-fhir-r4-core/HumanName";
export type { Identifier } from "../hl7-fhir-r4-core/Identifier";
export type { Period } from "../hl7-fhir-r4-core/Period";
export type { Reference } from "../hl7-fhir-r4-core/Reference";

export interface PatientCommunication extends BackboneElement {
    language: CodeableConcept<("ar" | "bn" | "cs" | "da" | "de" | "de-AT" | "de-CH" | "de-DE" | "el" | "en" | "en-AU" | "en-CA" | "en-GB" | "en-IN" | "en-NZ" | "en-SG" | "en-US" | "es" | "es-AR" | "es-ES" | "es-UY" | "fi" | "fr" | "fr-BE" | "fr-CH" | "fr-FR" | "fy" | "fy-NL" | "hi" | "hr" | "it" | "it-CH" | "it-IT" | "ja" | "ko" | "nl" | "nl-BE" | "nl-NL" | "no" | "no-NO" | "pa" | "pl" | "pt" | "pt-BR" | "ru" | "ru-RU" | "sr" | "sr-RS" | "sv" | "sv-SE" | "te" | "zh" | "zh-CN" | "zh-HK" | "zh-SG" | "zh-TW" | string)>;
    preferred?: boolean;
}

export interface PatientContact extends BackboneElement {
    address?: Address;
    gender?: ("male" | "female" | "other" | "unknown");
    name?: HumanName;
    organization?: Reference<"Organization">;
    period?: Period;
    relationship?: CodeableConcept[];
    telecom?: ContactPoint[];
}

export interface PatientLink extends BackboneElement {
    other: Reference<"Patient" | "RelatedPerson">;
    type: ("replaced-by" | "replaces" | "refer" | "seealso");
}

// CanonicalURL: http://hl7.org/fhir/StructureDefinition/Patient (pkg: hl7.fhir.r4.core#4.0.1)
export interface Patient extends DomainResource {
    resourceType: "Patient";

    active?: boolean;
    _active?: Element;
    address?: Address[];
    birthDate?: string;
    _birthDate?: Element;
    communication?: PatientCommunication[];
    contact?: PatientContact[];
    deceasedBoolean?: boolean;
    _deceasedBoolean?: Element;
    deceasedDateTime?: string;
    _deceasedDateTime?: Element;
    gender?: ("male" | "female" | "other" | "unknown");
    _gender?: Element;
    generalPractitioner?: Reference<"Organization" | "Practitioner" | "PractitionerRole">[];
    identifier?: Identifier[];
    link?: PatientLink[];
    managingOrganization?: Reference<"Organization">;
    maritalStatus?: CodeableConcept<("A" | "D" | "I" | "L" | "M" | "P" | "S" | "T" | "U" | "W" | "UNK" | string)>;
    multipleBirthBoolean?: boolean;
    _multipleBirthBoolean?: Element;
    multipleBirthInteger?: number;
    _multipleBirthInteger?: Element;
    name?: HumanName[];
    photo?: Attachment[];
    telecom?: ContactPoint[];
}
export const isPatient = (resource: unknown): resource is Patient => {
    return resource !== null && typeof resource === "object" && (resource as {resourceType: string}).resourceType === "Patient";
}
"
`;

exports[`TypeScript CDA with Logical Model Promotion to Resource without resourceType 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CD } from "../hl7-cda-uv-core/CD";
import type { CE } from "../hl7-cda-uv-core/CE";

// CanonicalURL: http://hl7.org/cda/stds/core/StructureDefinition/CV (pkg: hl7.cda.uv.core#2.0.1-sd)
export interface CV extends CE {
    translation?: CD[];
}
"
`;

exports[`TypeScript CDA with Logical Model Promotion to Resource without resourceType 2`] = `
"export * from "./profiles";
export type { Act } from "./Act";
export type { AD, ADItem } from "./AD";
export type { ADXP } from "./ADXP";
export type { AlternateIdentification } from "./AlternateIdentification";
export type { ANY } from "./ANY";
export type { AssignedAuthor } from "./AssignedAuthor";
export type { AssignedCustodian } from "./AssignedCustodian";
export type { AssignedEntity, AssignedEntitySdtcPatient } from "./AssignedEntity";
export type { AssociatedEntity } from "./AssociatedEntity";
export type { Authenticator } from "./Authenticator";
export type { Author } from "./Author";
export type { AuthoringDevice } from "./AuthoringDevice";
export type { Authorization } from "./Authorization";
export type { Birthplace } from "./Birthplace";
export type { BL } from "./BL";
export type { CD } from "./CD";
export type { CE } from "./CE";
export type { ClinicalDocument } from "./ClinicalDocument";
export type { CO } from "./CO";
export type { Component } from "./Component";
export type { ComponentOf } from "./ComponentOf";
export type { Consent } from "./Consent";
export type { CR } from "./CR";
export type { Criterion } from "./Criterion";
export type { CS } from "./CS";
export type { Custodian } from "./Custodian";
export type { CustodianOrganization } from "./CustodianOrganization";
export type { CV } from "./CV";
export type { DataEnterer } from "./DataEnterer";
export type { Device } from "./Device";
export type { DocumentationOf } from "./DocumentationOf";
export type { ED } from "./ED";
export type { EIVL_TS } from "./EIVL_TS";
export type { EN, ENItem } from "./EN";
export type { EncompassingEncounter, EncompassingEncounterLocation, EncompassingEncounterResponsibleParty } from "./EncompassingEncounter";
export type { Encounter } from "./Encounter";
export type { EncounterParticipant } from "./EncounterParticipant";
export type { Entity } from "./Entity";
export type { Entry } from "./Entry";
export type { EntryRelationship } from "./EntryRelationship";
export type { ENXP } from "./ENXP";
export type { ExternalAct } from "./ExternalAct";
export type { ExternalDocument } from "./ExternalDocument";
export type { ExternalObservation } from "./ExternalObservation";
export type { ExternalProcedure } from "./ExternalProcedure";
export type { Guardian } from "./Guardian";
export type { HealthCareFacility } from "./HealthCareFacility";
export type { IdentifiedBy } from "./IdentifiedBy";
export type { II } from "./II";
export type { Informant } from "./Informant";
export type { InformationRecipient } from "./InformationRecipient";
export type { InfrastructureRoot } from "./InfrastructureRoot";
export type { InFulfillmentOf } from "./InFulfillmentOf";
export type { InFulfillmentOf1, InFulfillmentOf1ActReference } from "./InFulfillmentOf1";
export type { INT } from "./INT";
export type { INT_POS } from "./INT_POS";
export type { IntendedRecipient } from "./IntendedRecipient";
export type { IVL_INT } from "./IVL_INT";
export type { IVL_PQ } from "./IVL_PQ";
export type { IVL_TS } from "./IVL_TS";
export type { IVXB_INT } from "./IVXB_INT";
export type { IVXB_PQ } from "./IVXB_PQ";
export type { IVXB_TS } from "./IVXB_TS";
export type { LabeledDrug } from "./LabeledDrug";
export type { LanguageCommunication } from "./LanguageCommunication";
export type { LegalAuthenticator } from "./LegalAuthenticator";
export type { MaintainedEntity } from "./MaintainedEntity";
export type { ManufacturedProduct } from "./ManufacturedProduct";
export type { Material } from "./Material";
export { isMaterial } from "./Material";
export type { MO } from "./MO";
export type { NonXMLBody } from "./NonXMLBody";
export type { Observation, ObservationReferenceRange } from "./Observation";
export type { ObservationMedia } from "./ObservationMedia";
export type { ObservationRange, ObservationRangeSdtcPrecondition1 } from "./ObservationRange";
export type { ON, ONItem } from "./ON";
export type { Order } from "./Order";
export type { Organization } from "./Organization";
export type { OrganizationPartOf } from "./OrganizationPartOf";
export type { Organizer } from "./Organizer";
export type { OrganizerComponent } from "./OrganizerComponent";
export type { ParentDocument } from "./ParentDocument";
export type { Participant1 } from "./Participant1";
export type { Participant2 } from "./Participant2";
export type { ParticipantRole } from "./ParticipantRole";
export type { Patient } from "./Patient";
export type { PatientRole } from "./PatientRole";
export type { Performer1 } from "./Performer1";
export type { Performer2 } from "./Performer2";
export type { Person, PersonSdtcAsPatientRelationship } from "./Person";
export type { PIVL_TS } from "./PIVL_TS";
export type { Place } from "./Place";
export type { PlayingEntity } from "./PlayingEntity";
export type { PN } from "./PN";
export type { PQ } from "./PQ";
export type { PQR } from "./PQR";
export type { Precondition } from "./Precondition";
export type { Precondition2 } from "./Precondition2";
export type { PreconditionBase } from "./PreconditionBase";
export type { Procedure } from "./Procedure";
export type { QTY } from "./QTY";
export type { REAL } from "./REAL";
export type { RecordTarget } from "./RecordTarget";
export type { Reference } from "./Reference";
export type { RegionOfInterest } from "./RegionOfInterest";
export type { RelatedDocument } from "./RelatedDocument";
export type { RelatedEntity } from "./RelatedEntity";
export type { RelatedSubject } from "./RelatedSubject";
export type { RTO_PQ_PQ } from "./RTO_PQ_PQ";
export type { SC } from "./SC";
export type { Section, SectionComponent } from "./Section";
export type { ServiceEvent } from "./ServiceEvent";
export type { Specimen } from "./Specimen";
export type { SpecimenRole } from "./SpecimenRole";
export type { ST } from "./ST";
export type { StructuredBody, StructuredBodyComponent } from "./StructuredBody";
export type { Subject } from "./Subject";
export type { SubjectPerson } from "./SubjectPerson";
export type { SubstanceAdministration, SubstanceAdministrationConsumable } from "./SubstanceAdministration";
export type { Supply, SupplyProduct } from "./Supply";
export type { SXCM_TS } from "./SXCM_TS";
export type { SXPR_TS } from "./SXPR_TS";
export type { TEL } from "./TEL";
export type { TS } from "./TS";
"
`;

exports[`TypeScript CDA with Logical Model Promotion to Resource without resourceType 3`] = `
"export { TNProfile } from "./EN_TN";
export { binProfile } from "./Base64Binary_bin";
export { blProfile } from "./Boolean_bl";
export { bnProfile } from "./Boolean_bn";
export { csProfile } from "./Code_cs";
export { intProfile } from "./Integer_int";
export { oidProfile } from "./String_oid";
export { probabilityProfile } from "./Decimal_probability";
export { realProfile } from "./Decimal_real";
export { ruidProfile } from "./String_ruid";
export { stProfile } from "./String_st";
export { tsProfile } from "./DateTime_ts";
export { uidProfile } from "./String_uid";
export { urlProfile } from "./Url_url";
export { uuidProfile } from "./String_uuid";
export { xs_IDProfile } from "./Id_xs_ID";
"
`;

exports[`TypeScript CDA with Logical Model Promotion to Resource with resourceType 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CE } from "../hl7-cda-uv-core/CE";
import type { EN } from "../hl7-cda-uv-core/EN";
import type { InfrastructureRoot } from "../hl7-cda-uv-core/InfrastructureRoot";
import type { ST } from "../hl7-cda-uv-core/ST";

import type { Element } from "../hl7-fhir-r5-core/Element";
// CanonicalURL: http://hl7.org/cda/stds/core/StructureDefinition/Material (pkg: hl7.cda.uv.core#2.0.1-sd)
export interface Material extends InfrastructureRoot {
    resourceType: "Material";

    classCode?: string;
    _classCode?: Element;
    code?: CE;
    determinerCode?: string;
    _determinerCode?: Element;
    lotNumberText?: ST;
    name?: EN;
}
export const isMaterial = (resource: unknown): resource is Material => {
    return resource !== null && typeof resource === "object" && (resource as {resourceType: string}).resourceType === "Material";
}
"
`;

exports[`TypeScript R4 Example (with generateProfile) file rewrite warnings match expected collisions 1`] = `
[
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_assertedDate.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_author.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_author.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_concept_comments.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_conceptOrder.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_effectiveDate.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Observation_Example_Lipid_Profile.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Observation_Example_Lipid_Profile.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Observation_Example_Lipid_Profile.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_expirationDate.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_expression.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_keyWord.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_label.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_location.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_location.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_map.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_method.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_otherName.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_precondition.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_primaryInd.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_replaces.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_replaces.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_replaces.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_replaces.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_sourceReference.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_statusReason.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_trusted_expansion.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_usage.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_warning.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_workflowStatus.ts'",
]
`;

exports[`TypeScript R4 Example (with generateProfile) generates bodyweight profile with validate() 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CodeableConcept } from "../../hl7-fhir-r4-core/CodeableConcept";
import type { Observation } from "../../hl7-fhir-r4-core/Observation";
import type { Period } from "../../hl7-fhir-r4-core/Period";
import type { Quantity } from "../../hl7-fhir-r4-core/Quantity";
import type { Reference } from "../../hl7-fhir-r4-core/Reference";

export interface observation_bodyweight extends Observation {
    category: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[];
    subject: Reference<"Patient">;
}

export type Observation_bodyweight_Category_VSCatSliceInput = Omit<CodeableConcept, "coding">;

import { ensureProfile, applySliceMatch, matchesValue, setArraySlice, getArraySlice, ensureSliceDefaults, stripMatchKeys, validateRequired, validateExcluded, validateFixedValue, validateSliceCardinality, validateEnum, validateReference, validateChoiceRequired } from "../../profile-helpers";

export type observation_bodyweightProfileParams = {
    status: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown");
    subject: Reference<"Patient">;
    category?: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[];
}

// CanonicalURL: http://hl7.org/fhir/StructureDefinition/bodyweight (pkg: hl7.fhir.r4.core#4.0.1)
export class observation_bodyweightProfile {
    static readonly canonicalUrl = "http://hl7.org/fhir/StructureDefinition/bodyweight"

    private static readonly VSCatSliceMatch: Record<string, unknown> = {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}

    private resource: Observation

    constructor (resource: Observation) {
        this.resource = resource
        ensureProfile(resource, "http://hl7.org/fhir/StructureDefinition/bodyweight")
    }

    static from (resource: Observation) : observation_bodyweightProfile {
        return new observation_bodyweightProfile(resource)
    }

    static createResource (args: observation_bodyweightProfileParams) : Observation {
        const categoryWithDefaults = ensureSliceDefaults(
            [...(args.category ?? [])],
            observation_bodyweightProfile.VSCatSliceMatch,
        )

        const resource = {
            resourceType: "Observation",
            code: {"coding":[{"code":"29463-7","system":"http://loinc.org"}]},
            category: categoryWithDefaults,
            status: args.status,
            subject: args.subject,
            meta: { profile: [observation_bodyweightProfile.canonicalUrl] },
        } as unknown as Observation
        return resource
    }

    static create (args: observation_bodyweightProfileParams) : observation_bodyweightProfile {
        return observation_bodyweightProfile.from(observation_bodyweightProfile.createResource(args))
    }

    toResource () : Observation {
        return this.resource
    }

    // Field accessors

    getStatus () : ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined {
        return this.resource.status as ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined
    }

    setStatus (value: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown")) : this {
        Object.assign(this.resource, { status: value })
        return this
    }

    getSubject () : Reference<"Patient"> | undefined {
        return this.resource.subject as Reference<"Patient"> | undefined
    }

    setSubject (value: Reference<"Patient">) : this {
        Object.assign(this.resource, { subject: value })
        return this
    }

    getCategory () : CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[] | undefined {
        return this.resource.category as CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[] | undefined
    }

    setCategory (value: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[]) : this {
        Object.assign(this.resource, { category: value })
        return this
    }

    getCode () : CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)> | undefined {
        return this.resource.code as CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)> | undefined
    }

    setCode (value: CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)>) : this {
        Object.assign(this.resource, { code: value })
        return this
    }

    getEffectiveDateTime () : string | undefined {
        return this.resource.effectiveDateTime as string | undefined
    }

    setEffectiveDateTime (value: string) : this {
        Object.assign(this.resource, { effectiveDateTime: value })
        return this
    }

    getEffectivePeriod () : Period | undefined {
        return this.resource.effectivePeriod as Period | undefined
    }

    setEffectivePeriod (value: Period) : this {
        Object.assign(this.resource, { effectivePeriod: value })
        return this
    }

    getValueQuantity () : Quantity | undefined {
        return this.resource.valueQuantity as Quantity | undefined
    }

    setValueQuantity (value: Quantity) : this {
        Object.assign(this.resource, { valueQuantity: value })
        return this
    }

    toProfile () : observation_bodyweight {
        return this.resource as observation_bodyweight
    }

    // Slices and extensions

    public setVSCat (input?: Observation_bodyweight_Category_VSCatSliceInput): this {
        const match = observation_bodyweightProfile.VSCatSliceMatch
        const value = applySliceMatch<CodeableConcept>(input ?? {}, match)
        setArraySlice(this.resource.category ??= [], match, value)
        return this
    }

    public getVSCat (): Observation_bodyweight_Category_VSCatSliceInput | undefined {
        const match = observation_bodyweightProfile.VSCatSliceMatch
        const item = getArraySlice(this.resource.category, match)
        if (!item) return undefined
        return stripMatchKeys<Observation_bodyweight_Category_VSCatSliceInput>(item, ["coding"])
    }

    public getVSCatRaw (): CodeableConcept | undefined {
        const match = observation_bodyweightProfile.VSCatSliceMatch
        const item = getArraySlice(this.resource.category, match)
        return item
    }

    // Validation

    validate(): string[] {
        const profileName = "observation-bodyweight"
        const res = this.resource as unknown as Record<string, unknown>
        return [
            ...validateRequired(res, profileName, "status"),
            ...validateEnum(res, profileName, "status", ["registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"]),
            ...validateRequired(res, profileName, "category"),
            ...validateSliceCardinality(res, profileName, "category", {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}, "VSCat", 1, 1),
            ...validateRequired(res, profileName, "code"),
            ...validateFixedValue(res, profileName, "code", {"coding":[{"code":"29463-7","system":"http://loinc.org"}]}),
            ...validateRequired(res, profileName, "subject"),
            ...validateReference(res, profileName, "subject", ["Patient"]),
            ...validateChoiceRequired(res, profileName, ["effectiveDateTime","effectivePeriod"]),
            ...validateReference(res, profileName, "hasMember", ["MolecularSequence","QuestionnaireResponse","Observation"]),
            ...validateReference(res, profileName, "derivedFrom", ["DocumentReference","ImagingStudy","Media","MolecularSequence","QuestionnaireResponse","Observation"]),
        ]
    }

}

"
`;

exports[`TypeScript R4 Example (with generateProfile) generates bp profile with validate() 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CodeableConcept } from "../../hl7-fhir-r4-core/CodeableConcept";
import type { Observation } from "../../hl7-fhir-r4-core/Observation";
import type { ObservationComponent } from "../../hl7-fhir-r4-core/Observation";
import type { Period } from "../../hl7-fhir-r4-core/Period";
import type { Quantity } from "../../hl7-fhir-r4-core/Quantity";
import type { Reference } from "../../hl7-fhir-r4-core/Reference";

export interface observation_bp extends Observation {
    category: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[];
    subject: Reference<"Patient">;
}

export type Observation_bp_Category_VSCatSliceInput = Omit<CodeableConcept, "coding">;
export type Observation_bp_Component_SystolicBPSliceInput = Omit<ObservationComponent, "code">;
export type Observation_bp_Component_DiastolicBPSliceInput = Omit<ObservationComponent, "code">;

import { ensureProfile, applySliceMatch, matchesValue, setArraySlice, getArraySlice, ensureSliceDefaults, stripMatchKeys, validateRequired, validateExcluded, validateFixedValue, validateSliceCardinality, validateEnum, validateReference, validateChoiceRequired } from "../../profile-helpers";

export type observation_bpProfileParams = {
    status: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown");
    subject: Reference<"Patient">;
    category?: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[];
    component?: ObservationComponent[];
}

// CanonicalURL: http://hl7.org/fhir/StructureDefinition/bp (pkg: hl7.fhir.r4.core#4.0.1)
export class observation_bpProfile {
    static readonly canonicalUrl = "http://hl7.org/fhir/StructureDefinition/bp"

    private static readonly VSCatSliceMatch: Record<string, unknown> = {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}
    private static readonly SystolicBPSliceMatch: Record<string, unknown> = {"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}}
    private static readonly DiastolicBPSliceMatch: Record<string, unknown> = {"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}}

    private resource: Observation

    constructor (resource: Observation) {
        this.resource = resource
        ensureProfile(resource, "http://hl7.org/fhir/StructureDefinition/bp")
    }

    static from (resource: Observation) : observation_bpProfile {
        return new observation_bpProfile(resource)
    }

    static createResource (args: observation_bpProfileParams) : Observation {
        const categoryWithDefaults = ensureSliceDefaults(
            [...(args.category ?? [])],
            observation_bpProfile.VSCatSliceMatch,
        )
        const componentWithDefaults = ensureSliceDefaults(
            [...(args.component ?? [])],
            observation_bpProfile.SystolicBPSliceMatch,
            observation_bpProfile.DiastolicBPSliceMatch,
        )

        const resource = {
            resourceType: "Observation",
            code: {"coding":[{"code":"85354-9","system":"http://loinc.org"}]},
            category: categoryWithDefaults,
            component: componentWithDefaults,
            status: args.status,
            subject: args.subject,
            meta: { profile: [observation_bpProfile.canonicalUrl] },
        } as unknown as Observation
        return resource
    }

    static create (args: observation_bpProfileParams) : observation_bpProfile {
        return observation_bpProfile.from(observation_bpProfile.createResource(args))
    }

    toResource () : Observation {
        return this.resource
    }

    // Field accessors

    getStatus () : ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined {
        return this.resource.status as ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined
    }

    setStatus (value: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown")) : this {
        Object.assign(this.resource, { status: value })
        return this
    }

    getSubject () : Reference<"Patient"> | undefined {
        return this.resource.subject as Reference<"Patient"> | undefined
    }

    setSubject (value: Reference<"Patient">) : this {
        Object.assign(this.resource, { subject: value })
        return this
    }

    getCategory () : CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[] | undefined {
        return this.resource.category as CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[] | undefined
    }

    setCategory (value: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[]) : this {
        Object.assign(this.resource, { category: value })
        return this
    }

    getCode () : CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)> | undefined {
        return this.resource.code as CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)> | undefined
    }

    setCode (value: CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)>) : this {
        Object.assign(this.resource, { code: value })
        return this
    }

    getComponent () : ObservationComponent[] | undefined {
        return this.resource.component as ObservationComponent[] | undefined
    }

    setComponent (value: ObservationComponent[]) : this {
        Object.assign(this.resource, { component: value })
        return this
    }

    getEffectiveDateTime () : string | undefined {
        return this.resource.effectiveDateTime as string | undefined
    }

    setEffectiveDateTime (value: string) : this {
        Object.assign(this.resource, { effectiveDateTime: value })
        return this
    }

    getEffectivePeriod () : Period | undefined {
        return this.resource.effectivePeriod as Period | undefined
    }

    setEffectivePeriod (value: Period) : this {
        Object.assign(this.resource, { effectivePeriod: value })
        return this
    }

    getValueQuantity () : Quantity | undefined {
        return this.resource.valueQuantity as Quantity | undefined
    }

    setValueQuantity (value: Quantity) : this {
        Object.assign(this.resource, { valueQuantity: value })
        return this
    }

    toProfile () : observation_bp {
        return this.resource as observation_bp
    }

    // Slices and extensions

    public setVSCat (input?: Observation_bp_Category_VSCatSliceInput): this {
        const match = observation_bpProfile.VSCatSliceMatch
        const value = applySliceMatch<CodeableConcept>(input ?? {}, match)
        setArraySlice(this.resource.category ??= [], match, value)
        return this
    }

    public setSystolicBP (input?: Observation_bp_Component_SystolicBPSliceInput): this {
        const match = observation_bpProfile.SystolicBPSliceMatch
        const value = applySliceMatch<ObservationComponent>(input ?? {}, match)
        setArraySlice(this.resource.component ??= [], match, value)
        return this
    }

    public setDiastolicBP (input?: Observation_bp_Component_DiastolicBPSliceInput): this {
        const match = observation_bpProfile.DiastolicBPSliceMatch
        const value = applySliceMatch<ObservationComponent>(input ?? {}, match)
        setArraySlice(this.resource.component ??= [], match, value)
        return this
    }

    public getVSCat (): Observation_bp_Category_VSCatSliceInput | undefined {
        const match = observation_bpProfile.VSCatSliceMatch
        const item = getArraySlice(this.resource.category, match)
        if (!item) return undefined
        return stripMatchKeys<Observation_bp_Category_VSCatSliceInput>(item, ["coding"])
    }

    public getVSCatRaw (): CodeableConcept | undefined {
        const match = observation_bpProfile.VSCatSliceMatch
        const item = getArraySlice(this.resource.category, match)
        return item
    }

    public getSystolicBP (): Observation_bp_Component_SystolicBPSliceInput | undefined {
        const match = observation_bpProfile.SystolicBPSliceMatch
        const item = getArraySlice(this.resource.component, match)
        if (!item) return undefined
        return stripMatchKeys<Observation_bp_Component_SystolicBPSliceInput>(item, ["code"])
    }

    public getSystolicBPRaw (): ObservationComponent | undefined {
        const match = observation_bpProfile.SystolicBPSliceMatch
        const item = getArraySlice(this.resource.component, match)
        return item
    }

    public getDiastolicBP (): Observation_bp_Component_DiastolicBPSliceInput | undefined {
        const match = observation_bpProfile.DiastolicBPSliceMatch
        const item = getArraySlice(this.resource.component, match)
        if (!item) return undefined
        return stripMatchKeys<Observation_bp_Component_DiastolicBPSliceInput>(item, ["code"])
    }

    public getDiastolicBPRaw (): ObservationComponent | undefined {
        const match = observation_bpProfile.DiastolicBPSliceMatch
        const item = getArraySlice(this.resource.component, match)
        return item
    }

    // Validation

    validate(): string[] {
        const profileName = "observation-bp"
        const res = this.resource as unknown as Record<string, unknown>
        return [
            ...validateRequired(res, profileName, "status"),
            ...validateEnum(res, profileName, "status", ["registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"]),
            ...validateRequired(res, profileName, "category"),
            ...validateSliceCardinality(res, profileName, "category", {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}, "VSCat", 1, 1),
            ...validateRequired(res, profileName, "code"),
            ...validateFixedValue(res, profileName, "code", {"coding":[{"code":"85354-9","system":"http://loinc.org"}]}),
            ...validateRequired(res, profileName, "subject"),
            ...validateReference(res, profileName, "subject", ["Patient"]),
            ...validateChoiceRequired(res, profileName, ["effectiveDateTime","effectivePeriod"]),
            ...validateReference(res, profileName, "hasMember", ["MolecularSequence","QuestionnaireResponse","Observation"]),
            ...validateReference(res, profileName, "derivedFrom", ["DocumentReference","ImagingStudy","Media","MolecularSequence","QuestionnaireResponse","Observation"]),
            ...validateSliceCardinality(res, profileName, "component", {"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}}, "SystolicBP", 1, 1),
            ...validateSliceCardinality(res, profileName, "component", {"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}}, "DiastolicBP", 1, 1),
        ]
    }

}

"
`;
